--- a/MSX1.qsf
+++ b/MSX1.qsf
@@ -261,9 +261,9 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 #set_global_assignment -name VERILOG_FILE rtl/hdmi2/hdmidataencoder.v
 #set_global_assignment -name QIP_FILE rtl/video/framebuffer.qip
 
+set_global_assignment -name VHDL_FILE SiDi/pll1.vhd
 set_global_assignment -name QIP_FILE "mist-modules/mist.qip"
 set_global_assignment -name SYSTEMVERILOG_FILE SiDi/sd_card.sv
-set_global_assignment -name VERILOG_FILE SiDi/pll.v
 set_global_assignment -name VERILOG_FILE SiDi/mist_io.v
 set_global_assignment -name VHDL_FILE rtl/audio/dac.vhd
 set_global_assignment -name SYSTEMVERILOG_FILE MSX1.sv
@@ -357,4 +357,6 @@ set_global_assignment -name VHDL_FILE rtl/audio/vm2413/EnvelopeMemory.vhd
 set_global_assignment -name VHDL_FILE rtl/audio/vm2413/EnvelopeGenerator.vhd
 set_global_assignment -name VHDL_FILE rtl/audio/vm2413/Controller.vhd
 set_global_assignment -name VHDL_FILE rtl/audio/vm2413/AttackTable.vhd
+set_global_assignment -name QIP_FILE SiDi/pll.qip
+set_global_assignment -name QIP_FILE SiDi/pll1.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
